WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284723
[MediaFoundation][Win Skia] wrong pixel format
https://bugs.webkit.org/show_bug.cgi?id=284723
Summary
[MediaFoundation][Win Skia] wrong pixel format
Fujii Hironori
Reported
2024-12-15 16:58:42 PST
[MediaFoundation][Win Skia] wrong pixel format All video play back with a wrong pixel format. Convert D3DFMT_A8R8G8B8 to kRGBA_8888_SkColorType. Convert D3DFMT_X8R8G8B8 to kRGB_888x_SkColorType.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-12-15 17:04:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37992
EWS
Comment 2
2024-12-16 11:45:55 PST
Committed
287902@main
(d53d3e61ec7c): <
https://commits.webkit.org/287902@main
> Reviewed commits have been landed. Closing PR #37992 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug