[MediaFoundation][Win Skia] Convert pixel format of video frames https://bugs.webkit.org/show_bug.cgi?id=284723

Reviewed by Don Olmstead.

Convert D3DFMT_A8R8G8B8 to kRGBA_8888_SkColorType, D3DFMT_X8R8G8B8 to
kRGB_888x_SkColorType. Note that D3DFMT_* depend on the endianness.
A8R8G8B8 is ARGB in big endian, BGRA in little endian.

* Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::Direct3DPresenter::paintCurrentFrame):

Canonical link: https://commits.webkit.org/287902@main